# smash-analysis

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  create_report.sh  slurm-job.sh  submit_to_slurm.sh  update_config_version.sh
cmake/: FindPythonModules.cmake  FloatMath.cmake
python_scripts/: README  common_plotting.py  comp_to_prev_version.py  lorentz.py  ordered_default_dict.py  pdgcode.py  pdgs_from_config.py  read_binary_output.py  reconstruct_interaction_graph.py  smash_basic_scripts.py  txt_io.py  version.py  version_check.py
test/FOPI_pions/: CMakeLists.txt  ReadMe  config.yaml  plot.py  yields.py
test/afterburner/: CMakeLists.txt  afterburner.yaml
test/angular_distributions/: CMakeLists.txt  angular.py  config.yaml  plot_t.py  plot_theta.py
test/cross_sections/: CMakeLists.txt  combine.py  config.yaml  geometrical_cross_section.py  plot.py
test/cross_sections/loewe_analysis/: cross_section_config.yaml  main_cross_section_script.bash  simulate_collider.bash
test/densities/: CMakeLists.txt  CalcDensityEvolution.py  WriteOutDensityCentralCell.py  config.yaml  plot_2d_density.py  plot_density_central_cell.py
test/densities/box_setup/: config.yaml  decaymodes_pi_k_n_lambda.txt  decaymodes_pi_rho.txt  particles_pi_k_n_lambda.txt  particles_pi_rho.txt
test/densities/collider_setup/: config.yaml
test/detailed_balance/: CMakeLists.txt  calc_eq_mult.py  count_reactions_binQ2.py  count_reactions_bin_t.py  get_hadronsort_T.py  multiplicity_vs_time.py
test/detailed_balance/KN_KDelta/: config.yaml  decaymodes.txt  particles.txt
test/detailed_balance/N_1440/: config.yaml  decaymodes.txt  particles.txt
test/detailed_balance/N_K_Lambda/: config.yaml  decaymodes.txt  particles.txt
test/detailed_balance/N_Nbar_resonances/: config.yaml  decaymodes.txt  particles.txt
test/detailed_balance/N_pi_Delta_12/: config.yaml
test/detailed_balance/N_pi_Delta_22/: config.yaml  decaymodes.txt  particles.txt
test/detailed_balance/N_pi_Delta_all/: config.yaml
test/detailed_balance/N_pi_deutron/: config.yaml  particles.txt
test/detailed_balance/Strangeness/: config.yaml  particles.txt
test/dileptons/: .gitignore  CMakeLists.txt  ReadMe  add_avg.py  add_hist.py  analysis_oscar.py  analysis_root.cc  avg_pions.py  create_hist_from_binary_output.py  decaymodes.txt  definitions.py  plot_hist.py  readHAFT2.f90
test/elastic_box/: CMakeLists.txt  config.yaml  elastic_scatrate.py  particles_only_p.txt  scatrate_space_distribution.py
test/energy_scan/: CMakeLists.txt  config_AuAu.yaml  config_PbPb.yaml  config_pp.yaml  mult_and_spectra.py  mult_and_spectra_plotter.py
test/report/: collect_pdfs_and_configs.sh  dicts_for_html_page.py  generate_html.py  generate_report_folder.sh  store_old_results.sh
(+1950 files in other folders)
